# gh-release-downloader

./: LICENSE  README.md  example_usage.py  gh-release-downloader.py  gh_release_downloader.py  pyproject.toml  test_markdown_to_slack.py  test_slack_notification.py
.github/workflows/: release.yml
