[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-release-downloader"
version = "0.7.0-rc3"
description = "A tool to download and manage assets from GitHub releases."
authors = [{name = "GISCE-TI, S.L."}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "requests",
    "click",
    "semver"
]

[project.scripts]
gh-release-downloader = "gh_release_downloader:main"

[project.urls]
homepage = "https://github.com/gisce/gh-release-downloader"
repository = "https://github.com/gisce/gh-release-downloader"
documentation = "https://github.com/gisce/gh-release-downloader#readme"

[tool.setuptools]
py-modules = ["gh_release_downloader"]
